[package]
name = "anonima-address"
description = "Filecoin addresses for use in Forest"
license = "MIT OR Apache-2.0"
version = "0.3.1"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"
repository = "https://github.com/ChainSafe/forest"

[dependencies]
num-traits = "0.2"
num-derive = "0.3.0"
data-encoding = "2.1.2"
data-encoding-macro = "0.1.7"
leb128 = "0.2.1"
encoding = { path = "../encoding", package = "anonima-encoding" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
anonima_json_utils = { path = "../utils/json_utils", optional = true }
once_cell = "1.7.2"

[features]
json = ["anonima_json_utils"]
testnet = []