[package]
name = "anonima"
version = "0.1.0"
authors = ["Drew Stone <drewstone329@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
async-std = { version = "1.9.0", features = ["attributes"] }

futures = "0.3.13"
libp2p = "0.35.1"

prost = "0.7.0"
prost-types = "0.7.0"
wasm-timer = "0.2.4"
void = "1"
rand = "0.7"

# Logging
log = "0.4.14"
pretty_env_logger = "0.4.0"
env_logger = "0.8.3"
async-log = "2.0.0"