[package]
name = "anonima"
version = "0.1.0"
authors = ["Drew Stone <drewstone329@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
async-std = { version = "1.9", features = ["attributes", "tokio1"] }
structopt = { version = "0.3" }
ctrlc = "3.1.4"
rpassword = "0.0.4"
db = { path = "../db", package = "anonima_db" }

futures = "0.3.5"
log = "0.4.8"
async-log = "2.0.0"
env_logger = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
pretty_env_logger = "0.4.0"
libp2p = { version = "0.35", default-features = false, features = ["identify"] }

prost = "0.7.0"
prost-types = "0.7.0"
wasm-timer = "0.2.4"
void = "1"
rand = "0.7"

# Anonima
wallet = { package = "key_management", path = "../key_management" }
net_utils = { path = "../utils/net_utils" }
num-bigint = { path = "../utils/bigint", package = "anonima_bigint" }
address = { path = "../address", package = "anonima-address", version = "0.3" }
anonima_libp2p = { path = "../network" }

[dependencies.jsonrpc-v2]
version = "0.10.0"
features = ["easy-errors", "macros", "bytes-v05"]
default-features = false

[features]
default = ["rocksdb"]
rocksdb = ["db/rocksdb"]
sled = ["db/sled"]