[package]
name = "connections"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rust-crypto = "0.2"
secp256k1 = "0.20.2"
hex-literal = "0.3.1"
sha3 = "0.9.0"
web3 = "0.15.0"
hex = "0.4.3"
arrayvec = "0.5.0"
derive_more = "0.99.1"
ethabi = "14.0.0"
ethereum-types = "0.11.0"
futures = "0.3.5"
futures-timer = "3.0.2"
jsonrpc-core = "17.0.0"
log = "0.4.6"
parking_lot = "0.11.0"
rlp = "0.5"
serde = "1.0.90"
serde_json = "1.0.39"
pin-project = "1.0"
base64 = "0.13"
hyper-tls ="0.5"
async-std = { version = "1.6", optional = true }
tokio-stream  = "0.1"
soketto = "0.4.1"
url = "2.1"



