[package]
name = "forest_libp2p"
version = "0.1.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"

[dependencies]
libp2p = { version = "0.35", default-features = false, features = [
    "gossipsub",
    "kad",
    "identify",
    "ping",
    "mdns",
    "noise",
    "yamux",
    "tcp-async-io",
    "dns",
    "mplex",
    "request-response",
    "websocket"
] }
futures = "0.3.5"
futures-util = "0.3.5"
futures_codec = "0.4.0"
log = "0.4.8"
async-std = "1.9"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0"
fnv = "1.0.6"
smallvec = "1.1.0"

num-bigint = { path = "../utils/bigint", package = "forest_bigint" }
forest_encoding = { path = "../encoding" }

async-trait = "0.1"
lazy_static = "1.4"
futures_cbor_codec = { git = "https://github.com/najamelan/futures_cbor_codec", rev = "de08e31530513f993cbf5efef7311ac5194b2256" }
git-version = "0.3.4"

[dev-dependencies]
async-std = { version = "1.9", features = ["attributes"] }
