[package]
name = "ap-keystore"
version = "0.1.0"
authors = ["mmacedoeu <contato@mmacedo.eu.org>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/webb-tools/anonima"
description = "Keystore primitives."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1.30"
derive_more = "0.99.2"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
futures = { version = "0.3.1" }
parking_lot = { version = "0.11.1", default-features = false }
serde = { version = "1.0", optional = true}
ap-core = { version = "3.0.0", path = "../core" }
# sp-externalities = { version = "0.9.0", path = "../externalities", default-features = false }

[dev-dependencies]
rand = "0.8.3"
rand_chacha = "0.3.0"


[features]
default = ["std"]
std = [
	"serde",
]
